Read the comparison, the revisions and the project's description from their screens
The comparison of two versions is one screen now, whichever way it is
reached, and a cell of it is named by the address it has in the workbook.
Revisions are a list of entries, and what a project says about itself is
written on the project's own card. Records the lost project rename in
KNOWN-ISSUES.md.